Fix spacing in header

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ body {
 
 .hero .bottom .left {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 1fr 9fr;
 }
 
 .hero .bottom .left :last-child {
